# sched-agent

./: .gitignore  Dockerfile  README.md  dev.py  docker-compose.yml  env.example  pyproject.toml
app/: mcp_server.py
app/agent/: agent.py
app/chat/: scheduler.py
tests/: test_agent.py
